--- a/pages/activity-runner.html
+++ b/pages/activity-runner.html
@@ -119,7 +119,7 @@
           </label>
         </span>
 
-        <button id="next-btn" type="button" aria-label="Volgende">
+        <button id="next-btn" class="secondary" type="button" aria-label="Volgende">
           ▶
         </button>
       </div>
@@ -176,7 +176,7 @@
       <div id="log" class="log-body">Log start…</div>
     </section>
 
-    <p class="version-stamp">Version: 2026.01.05.1020 — generated 2026-01-05 10:20</p>
+    <p class="version-stamp">Version: 2026.01.05.1023 — generated 2026-01-05 10:23</p>
   </main>
 
   <a class="settings-fab" href="../pages/settings.html" aria-label="Settings">
