--- a/pages/activity-runner.html
+++ b/pages/activity-runner.html
@@ -115,7 +115,7 @@
         <span class="runner-controls">
           <label class="auto-next" title="Automatisch volgende activiteit starten">
             <input id="auto-run" type="checkbox" checked />
-            <span>auto</span>
+            <span></span>
           </label>
         </span>
 
@@ -176,7 +176,7 @@
       <div id="log" class="log-body">Log start…</div>
     </section>
 
-    <p class="version-stamp">Version: 2026.01.05.1038 — generated 2026-01-05 10:38</p>
+    <p class="version-stamp">Version: 2026.01.05.1041 — 2026-01-05 10:41</p>
   </main>
 
   <a class="settings-fab" href="../pages/settings.html" aria-label="Settings">
