--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -4,10 +4,26 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Feedback demo</title>
+  <style>
+    #log { font-family: monospace; white-space: pre-wrap; }
+  </style>
 </head>
 <body>
   <button id="btnCorrect">Correct</button>
   <button id="btnIncorrect">Incorrect</button>
+
+  <pre id="log">Log start…</pre>
+
+  <script>
+    function logLine(msg) {
+      const el = document.getElementById("log");
+      if (el.textContent === "Log start…") el.textContent = "";
+      el.textContent += msg + "\n";
+    }
+    window.eventLog = {
+      log(msg) { logLine(msg); }
+    };
+  </script>
 
   <script src="/js/sounds.js"></script>
   <script src="/js/feedback.js"></script>
