--- a/pages/settings.html
+++ b/pages/settings.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="nl">
+<html lang="nl" class="force-dark">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -85,6 +85,10 @@
       <!-- Debug -->
       <div id="debugBox" class="debug">Debug: (loading…)</div>
 
+    </div>
+
+    <div class="bottom-nav">
+      <a class="home-link" href="../index.html" aria-label="Home">🏠</a>
     </div>
   </div>
 </main>
