--- a/pages/activity-runner.html
+++ b/pages/activity-runner.html
@@ -69,14 +69,15 @@
 
     /* Nav: only Prev + Auto + Next (no Start button) */
     .braille-nav{
-      display:grid;
+      display:flex;
       align-items:center;
-      grid-template-columns: 1fr auto 1fr;
-      gap:.75rem;
+      justify-content: center;
       margin-top: .75rem;
     }
-    .braille-nav > button{
-      width: 100%;
+    .header-nav{
+      display: inline-flex;
+      gap: 8px;
+      align-items: center;
     }
     .runner-controls{
       display:flex;
@@ -106,24 +107,17 @@
           <span id="field-word" class="word-text">–</span>
           <span id="field-word-braille" class="word-braille">–</span>
         </div>
+
+        <div class="header-nav" aria-label="Navigatie">
+          <button id="prev-btn" class="secondary icon-button" type="button" aria-label="Vorige">
+            ◀
+          </button>
+          <button id="next-btn" class="secondary icon-button" type="button" aria-label="Volgende">
+            ▶
+          </button>
+        </div>
       </div>
 
-      <div class="braille-nav" aria-label="Navigatie">
-        <button id="prev-btn" class="secondary" type="button" aria-label="Vorige">
-          ◀
-        </button>
-
-        <span class="runner-controls">
-          <label class="auto-next" title="Automatisch volgende activiteit starten">
-            <input id="auto-run" type="checkbox" checked />
-            <span></span>
-          </label>
-        </span>
-
-        <button id="next-btn" class="secondary" type="button" aria-label="Volgende">
-          ▶
-        </button>
-      </div>
     </div>
 
     <div id="brailleMonitorComponent"></div>
@@ -147,6 +141,8 @@
               🏠
             </button>
 
+            <button id="lang-pill" class="secondary icon-button lang-pill" type="button" aria-label="Language"></button>
+
             <a class="secondary icon-button" href="braillebridge://"
               aria-label="Start BrailleBridge">🔌</a>
           </div>
@@ -158,6 +154,10 @@
             aria-controls="fields-panel"
             aria-expanded="false">
             ⓘ
+          </button>
+
+          <button id="auto-run-btn" class="secondary icon-button" type="button" aria-label="Auto">
+            🔁
           </button>
 
           <button id="toggle-log-btn" class="secondary icon-button" type="button" aria-label="Log">
@@ -174,6 +174,8 @@
         </div>
       </div>
     </div>
+
+    <input id="auto-run" type="checkbox" checked hidden />
 
     <section id="fields-panel" class="log-panel hidden" aria-label="Info">
       <div class="log-header">
