--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   <script defer src="https://cloud.umami.is/script.js" data-website-id="e5e6688f-dec8-44f0-8b83-b223bda340af"></script> 
 
   <style>
+    @font-face {
+      font-family: "Noto Sans";
+      src: url("./assets/fonts/NotoSans-Regular.woff2") format("woff2");
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    @font-face {
+      font-family: "Noto Sans";
+      src: url("./assets/fonts/NotoSans-SemiBold.woff2") format("woff2");
+      font-weight: 600;
+      font-style: normal;
+      font-display: swap;
+    }
+
     :root {
       --bg: #f3f4f6;
       --fg: #111827;
@@ -55,8 +71,7 @@
     body {
       margin: 0;
       padding: 20px;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Arial, sans-serif;
+      font-family: "Noto Sans", Arial, sans-serif;
       background: var(--bg);
       color: var(--fg);
       display: flex;
