--- a/pages/stories.html
+++ b/pages/stories.html
@@ -6,6 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
+    @font-face {
+      font-family: "Noto Sans";
+      src: url("../assets/fonts/NotoSans-Regular.woff2") format("woff2");
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    @font-face {
+      font-family: "Noto Sans";
+      src: url("../assets/fonts/NotoSans-SemiBold.woff2") format("woff2");
+      font-weight: 600;
+      font-style: normal;
+      font-display: swap;
+    }
+
     /* -------------------------------------------------------
        Theme tokens (default = light)
     ------------------------------------------------------- */
@@ -42,7 +58,7 @@
       display: grid;
       grid-template-columns: 300px 1fr;
       background: var(--bg);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: "Noto Sans", Arial, sans-serif;
       color: var(--text);
     }
 
