--- a/pages/settings.html
+++ b/pages/settings.html
@@ -14,14 +14,9 @@
 </head>
 
 <body>
-<header>
-  <div class="wrap">
-    <h1 data-i18n="settings.title">Settings</h1>
-  </div>
-</header>
-
 <main>
   <div class="wrap">
+    <h1 class="page-title" data-i18n="settings.title">Settings</h1>
     <div class="card">
 
       <!-- Language -->
@@ -89,6 +84,7 @@
 
     <div class="bottom-nav">
       <a class="home-link" href="../index.html" aria-label="Home">🏠</a>
+      <a class="home-link" href="https://www.tastenbraille.com/braillestudio/downloads/setup_braillebridge_v10.exe" aria-label="Download">⬇️</a>
     </div>
   </div>
 </main>
