--- a/tools/braillebridgetest.html
+++ b/tools/braillebridgetest.html
@@ -332,7 +332,7 @@
           <div class="hd">
             <div>
               <h2>HTTP calls</h2>
-              <div class="hint">POST /braille (plain text) · GET /clear · GET /ping · GET /devices · GET /braille/test</div>
+              <div class="hint"></div>
             </div>
             <div class="pill">
               <span>HTTP status</span>
