--- a/tools/braillebridgetest.html
+++ b/tools/braillebridgetest.html
@@ -392,7 +392,7 @@
           <div class="hd">
             <div>
               <h2>WebSocket</h2>
-              <div class="hint">Connect · Send UTF-8 text · Receive JSON key events</div>
+              <div class="hint"></div>
             </div>
             <div class="pill">
               <span>WS</span>
@@ -418,10 +418,6 @@
               <div class="log" id="log"></div>
             </div>
 
-            <div class="small">
-              Parser:
-              <span class="warn">Incoming messages are expected to be JSON (key events). If a message is plain text, it will be logged as text.</span>
-            </div>
           </div>
         </section>
 
